corrected some bugs on mobile

--- a/frontend/src/app/components/footer/footer.component.css
+++ b/frontend/src/app/components/footer/footer.component.css
@@ -1,19 +1,29 @@
-.footer {
-  overflow-wrap: break-word;
+.bottom {
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 50%;
+  color: aliceblue;
+  width: 40%;
   margin: auto;
-  height: 5vh;
-  border-radius: 10px;
-  margin-top: 5vh;
-  margin-bottom: 5vh;
-  padding-top: 15px;
-  background: linear-gradient(200deg, #2f288d6c 0%, #ee494980 70%);
-  border-radius: 30px;
-  -webkit-filter: drop-shadow(5px 5px 50px rgba(255, 158, 68, 0.192));
+}
+
+.bottom span {
+  text-align: center;
+  margin: auto;
+  width: 100%;
+  padding: 1rem 0.5rem 0.5rem 0.5rem;
+  border-radius: 16px;
+  margin: 2rem 0 1rem 0;
+  background: linear-gradient(
+    330deg,
+    #2f288d41,
+    rgba(143, 21, 0, 0.137),
+    #ff555598 99%
+  );
+
+  -webkit-filter: drop-shadow(5px 5px 50px #2f288d41);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(7.3px);
+}
+.bottom :any-link {
   color: aliceblue;
 }
