--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -11,6 +11,10 @@
   
 }
 
+p {
+  padding-right: 10%;
+}
+
 h1 {
   margin-left: 10px;
 }
